# sparse-index-tracking

./: .gitignore  README.md  proposal.tex  pyproject.toml  requirements.txt
configs/: default.yaml
experiments/: run_experiment.py
figures/: statistical_tests.csv  summary_table.csv
notebooks/: analysis.ipynb
report/: main.tex
results/: factor_mse_results.json  factor_task_lambda0.0_results.json  factor_task_results.json  neural_mse_results.json  neural_task_lambda0.0_results.json  neural_task_results.json
results/ablation/: factor_mse_monthly_results.json  neural_task_lambda0.01_results.json  neural_task_lambda0.1_results.json
scripts/: exp1_dfl_vs_twostage.sh  exp2_sparsity_frontier.sh  exp3_factor_vs_neural.sh  exp_synthetic_quick.sh  generate_figures.py  generate_presentation_figures.py  run_all.sh
src/: __init__.py  data.py  evaluate.py  losses.py  main.py  models.py  qp_layer.py  train.py
src/data/: __init__.py  features.py  loader.py  splitter.py  synthetic.py
src/evaluation/: __init__.py  metrics.py  plots.py
src/models/: __init__.py  factor_model.py  neural_model.py  shrinkage_model.py
src/optimization/: __init__.py  qp_layer.py  solver.py
src/training/: __init__.py  losses.py  trainer.py
src/utils/: logging.py  seed.py
tests/: test_data.py  test_e2e.py  test_features.py  test_metrics.py  test_models.py  test_optimization.py  test_qp_layer.py  test_splitter.py  test_train.py
